--- a/bin/application/Sample.fxml
+++ b/bin/application/Sample.fxml
@@ -51,6 +51,84 @@
       </HBox>
       <HBox alignment="CENTER" prefWidth="200.0" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2;" VBox.vgrow="ALWAYS">
          <children>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="70.0">
+               <children>
+                  <GridPane prefHeight="196.0" prefWidth="70.0" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2;" VBox.vgrow="ALWAYS">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label alignment="CENTER" text="C1" textFill="#ae3ec9" GridPane.halignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <TextField alignment="CENTER" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2; -fx-background-radius: 7;" text="3" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                        <Label alignment="CENTER" text="C2" textFill="#ae3ec9" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="CENTER" text="C5" textFill="#ae3ec9" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="CENTER" text="C4" textFill="#ae3ec9" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label alignment="CENTER" text="C3" textFill="#ae3ec9" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <TextField alignment="CENTER" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2; -fx-background-radius: 7;" text="3" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                        <TextField alignment="CENTER" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2; -fx-background-radius: 7;" text="3" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                        <TextField alignment="CENTER" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2; -fx-background-radius: 7;" text="3" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                        <TextField alignment="CENTER" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2; -fx-background-radius: 7;" text="3" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                     <VBox.margin>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </VBox.margin>
+                     <padding>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                     </padding>
+                  </GridPane>
+               </children>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </VBox>
             <GridPane prefHeight="201.0" prefWidth="230.0" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2;">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
