--- a/src/application/Sample.fxml
+++ b/src/application/Sample.fxml
@@ -308,6 +308,7 @@
                 <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="87.0" />
                   <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="136.0" />
                 <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -326,10 +327,21 @@
                         <Font name="Tahoma Bold" size="14.0" />
                      </font>
                   </TextField>
-                  <Button fx:id="btnSortear" mnemonicParsing="false" onAction="#sortear" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="Sortear" textFill="#862e9c" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                  <Button fx:id="btnSortear" mnemonicParsing="false" onAction="#sortear" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="Sortear" textFill="#862e9c" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                      <font>
                         <Font name="Tahoma Bold" size="12.0" />
                      </font>
+                     <GridPane.margin>
+                        <Insets right="1.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="btnSalvar" layoutX="260.0" layoutY="19.0" mnemonicParsing="false" onAction="#salvarApostas" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="Salvar" textFill="#862e9c" GridPane.columnIndex="3" GridPane.halignment="LEFT">
+                     <font>
+                        <Font name="Tahoma Bold" size="12.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="1.0" />
+                     </GridPane.margin>
                   </Button>
                </children>
             </GridPane>
