--- a/src/application/SampleFull.fxml
+++ b/src/application/SampleFull.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <HBox spacing="2.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SampleFullController">
    <children>
       <VBox alignment="CENTER" prefHeight="550.0" prefWidth="350.0" spacing="3.0" style="-fx-border-color: #862e9c; -fx-border-width: 2; -fx-border-radius: 2; -fx-background-radius: 4;" HBox.hgrow="ALWAYS">
@@ -311,7 +310,10 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2; -fx-background-color: #f3d9fa; -fx-background-radius: 7;" text="C" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                        <Button fx:id="btnConcursoAposta" alignment="CENTER" mnemonicParsing="false" onAction="#changeApostaConcurso" prefHeight="35.0" prefWidth="35.0" style="-fx-border-color: #ae3ec9; -fx-border-radius: 7; -fx-border-width: 2; -fx-background-color: #f3d9fa; -fx-background-radius: 7;" text="C" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font></Button>
                      </children>
                   </GridPane>
                </children>
@@ -337,7 +339,7 @@
                               <Font name="Tahoma Bold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="txfQtdApostas" alignment="CENTER" prefHeight="30.0" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="7" GridPane.columnIndex="1">
+                        <TextField fx:id="txfQtdApostas" alignment="CENTER" prefHeight="30.0" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="1" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                            </GridPane.margin>
