--- a/src/application/SampleFull.fxml
+++ b/src/application/SampleFull.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -438,6 +439,11 @@
                               <Font name="Tahoma Bold" size="14.0" />
                            </font>
                         </TextField>
+                        <CheckBox fx:id="cbGeral" mnemonicParsing="false" onAction="#chequeGeral" text="Geral" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </CheckBox>
                      </children>
                   </GridPane>
                </children>
@@ -460,6 +466,35 @@
                            </font>
                         </Label>
                         <TextField fx:id="txfMediaImpar" alignment="CENTER" prefHeight="30.0" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="7" GridPane.columnIndex="1">
+                           <GridPane.margin>
+                              <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
+                           </GridPane.margin>
+                           <font>
+                              <Font name="Tahoma Bold" size="14.0" />
+                           </font>
+                        </TextField>
+                     </children>
+                  </GridPane>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_RIGHT" layoutX="16.0" layoutY="411.0" prefHeight="50.0" prefWidth="200.0" style="-fx-border-color: #ae3ec9; -fx-border-width: 2; -fx-border-radius: 7;">
+               <children>
+                  <GridPane alignment="CENTER_RIGHT" prefHeight="87.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                     <columnConstraints>
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="140.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="136.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <Label text="Dezenas por Aposta:" textFill="#862e9c" GridPane.halignment="CENTER">
+                           <font>
+                              <Font name="Tahoma Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="txfQTDDezenasPorAbosta" alignment="CENTER" prefHeight="30.0" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="15" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                            </GridPane.margin>
