--- a/src/application/SampleFull.fxml
+++ b/src/application/SampleFull.fxml
@@ -652,20 +652,20 @@
                <children>
                   <GridPane alignment="CENTER_RIGHT" prefHeight="87.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                      <columnConstraints>
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="140.0" />
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="136.0" minWidth="10.0" prefWidth="136.0" />
-                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="188.0" minWidth="10.0" prefWidth="188.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="169.0" minWidth="10.0" prefWidth="117.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="57.0" />
                      </columnConstraints>
                      <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Label text="---" textFill="#862e9c" GridPane.halignment="CENTER">
+                        <Label text="M. Comp. Apostas:" textFill="#862e9c" GridPane.halignment="CENTER">
                            <font>
                               <Font name="Tahoma Bold" size="12.0" />
                            </font>
                         </Label>
-                        <TextField alignment="CENTER" prefHeight="30.0" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="0" GridPane.columnIndex="1">
+                        <TextField fx:id="txfMediaCompAposta" alignment="CENTER" prefHeight="30.0" style="-fx-border-color: #862e9c; -fx-border-radius: 3;" text="10" GridPane.columnIndex="1">
                            <GridPane.margin>
                               <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                            </GridPane.margin>
